--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,4 @@ saved_models
 train-scene
 vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5
 vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5
+.DS_Store
