--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,4 @@ vgg16_weights_tf_dim_ordering_tf_kernels_notop.h5
 vgg19_weights_tf_dim_ordering_tf_kernels_notop.h5
 .DS_Store
 approach2
+data-train
